# jsc-nerf-turret

./: .gitignore  .gitmodules  README.md  btclient.py  run.sh
3d/: Turret Shaft.stl  Turret Support Higher Level.stl  Turret Support Lower Level.stl
docs/: README.md  todo.md
docs/electronics/: raspi-ulm2003.cddx  turret.md
docs/images/printing/: turret-support-high.xcf  turret-support-low.xcf
raspi/: start-raspi.sh
src/: Makefile  Makefile.am  autogen.sh  btclient.py  btserver.py  buildme.sh  cleanup.sh  configure.ac  dev-tools.sh
src/btservice/: Makefile.am  btclient.c  btclient.h  btconstant.h  btserver.c  btserver.h  btservice.c  btservice.h
src/jscturret/: Makefile.am  jscturret.c  jscturret.h
src/libs/: Makefile  bt.c  bt.h  stepper.h
src/stepper/: Makefile  Makefile.am  main.c  stepper.c  stepper.h
src/utils/: Makefile.am  logger.c  logger.h
