lib_LTLIBRARIES = libbtservice.la
libbtservice_la_SOURCES = btserver.c btclient.c
include_HEADERS = btconstant.h btserver.h btclient.h
libbtservice_la_CPPFLAGS = -I$(top_srcdir)/utils
libbtservice_la_CFLAGS = ${GLIB_CFLAGS}
libbtservice_la_CFLAGS += ${DBUS_CFLAGS}
libbtservice_la_CFLAGS += ${DBUSGLIB_CFLAGS}
libbtservice_la_CFLAGS += ${GIO_CFLAGS}
libbtservice_la_CFLAGS += ${GIOUNIX_CFLAGS}
libbtservice_la_LIBADD = ${GLIB_LIBS}
libbtservice_la_LIBADD += ${DBUS_LIBS}
libbtservice_la_LIBADD += ${DBUSGLIB_LIBS}
libbtservice_la_LIBADD += ${GIO_LIBS}
libbtservice_la_LIBADD += ${GIOUNIX_LIBS}
libbtservice_la_LIBADD += ../utils/libjscutils.la