bin_PROGRAMS = jscturret
jscturret_SOURCES = jscturret.c
jscturret_CPPFLAGS = -I$(top_srcdir)/btservice/
jscturret_CPPFLAGS += -I$(top_srcdir)/utils/
jscturret_CPPFLAGS += ${GLIB_CFLAGS}
jscturret_CPPFLAGS += ${GIOUNIX_CFLAGS}
jscturret_LDADD = ${GLIB_LIBS}
jscturret_LDADD += ${DBUSGLIB_LIBS}
jscturret_LDADD += ${DBUS_LIBS}
jscturret_LDADD += ${GIO_LIBS}
jscturret_LDADD += ../btservice/libbtservice.la
jscturret_LDADD += ../utils/libjscutils.la